fixed Mentoract bug that crashed when no interaction list was present converted raw iterators to generics